@@ -26,9 +26,9 @@ dependencies {
     implementation 'commons-net:commons-net:3.9.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
-    implementation 'org.springframework:spring-beans:5.3.0'
-    implementation 'org.springframework:spring-jdbc:5.3.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.4.0.0'
+    implementation 'org.springframework:spring-beans:5.3.1'
+    implementation 'org.springframework:spring-jdbc:5.3.1'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
