@@ -2,37 +2,32 @@
 
 <beans>
     <bean id="importer" class="edu.mcw.rgd.pipelines.GeneLociPipeline" >
-        <property name="version" value="Gene Loci Pipeline   -- build Aug 08, 2023" />
+        <property name="version" value="Gene Loci Pipeline   -- build Sep 01, 2023" />
         <property name="runList">
             <list >
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- RAT assembly 7.2 -->
                     <property name="mapKey" value="372"/>
-                    <property name="dbSnpBuild" value=""/>
                     <property name="speciesTypeKey" value="3"/>
                     <property name="runIt" value="true"/>
                 </bean>
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- RAT assembly 6.0 -->
                     <property name="mapKey" value="360"/>
-                    <property name="dbSnpBuild" value="dbSnp146"/>
                     <property name="speciesTypeKey" value="3"/>
                     <property name="runIt" value="true"/>
                 </bean>
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- RAT assembly 5.0 -->
                     <property name="mapKey" value="70"/>
-                    <property name="dbSnpBuild" value="dbSnp138"/>
                     <property name="speciesTypeKey" value="3"/>
                     <property name="runIt" value="true"/>
                 </bean>
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- RAT assembly 3.4 -->
                     <property name="mapKey" value="60"/>
-                    <property name="dbSnpBuild" value="dbSnp136"/>
                     <property name="speciesTypeKey" value="3"/>
                     <property name="runIt" value="true"/>
                 </bean>
 
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- MOUSE GRCm37 -->
                     <property name="mapKey" value="18"/>
-                    <property name="dbSnpBuild" value="dbSnp131"/>
                     <property name="speciesTypeKey" value="2"/>
                     <property name="runIt" value="true"/>
                 </bean>
@@ -49,20 +44,17 @@
 
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- HUMAN GRCh37 -->
                     <property name="mapKey" value="17"/>
-                    <property name="dbSnpBuild" value="dbSnp138"/>
                     <property name="speciesTypeKey" value="1"/>
                     <property name="runIt" value="true"/>
                 </bean>
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- HUMAN GRCh38-->
                     <property name="mapKey" value="38"/>
-                    <property name="dbSnpBuild" value="dbSnp147"/>
                     <property name="speciesTypeKey" value="1"/>
                     <property name="runIt" value="true"/>
                 </bean>
 
                 <bean class="edu.mcw.rgd.pipelines.RunInfo"><!-- DOG -->
                     <property name="mapKey" value="631"/>
-                    <property name="dbSnpBuild" value="dbSnp151"/>
                     <property name="speciesTypeKey" value="6"/>
                     <property name="runIt" value="true"/>
                 </bean>
