@@ -1,3 +1,6 @@
+Sep 01, 2023
+  cleanup: removed obsolete code referencing obsolete DB_SNP table
+
 Aug 08, 2023
 Apr 14, 2023
   updated jar references
